public/global.css
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}

body {
	background-color: #343541;
	color: #333;
	margin: 0;
	padding: 25px;
	box-sizing: border-box;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

a {
	color: rgb(0,100,200);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

a:visited {
	color: rgb(0,80,160);
}

label {
	display: block;
}

input, button, select, textarea {
	font-family: inherit;
	font-size: inherit;
	-webkit-padding: 0.4em 0;
	padding: 0.4em;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 2px;
}

input:disabled {
	opacity: 0.25;
}

input:focus {
    outline: none;
}

button {
	color: white;
	background-color: rgba(255,255,255,0.05);
	box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
	outline: none;
	cursor: pointer;
	transition: opacity 0.2s;
	user-select: none;
}

button:disabled {
	opacity: 0.25;
	cursor: auto;
}

button:not(:disabled):hover,
button:not(:disabled):active {
	opacity: 0.5;
}

